bk_ida/gccida/c3/gen_split_1157
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1157/src/insn-emit.c:14306:25: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
ix86_split_fp_branch( ( rtx_code)*( _WORD *)*operands, operands[1], operands[2], operands[3], operands[4], 0LL); 
                        ^~~~~~~~
                        rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1157/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1157/src/insn-emit.c:14306:34: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
ix86_split_fp_branch( ( rtx_code)*( _WORD *)*operands, operands[1], operands[2], operands[3], operands[4], 0LL); 
                      ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_1157/src/obj/insn-emit.o] Error 1
